--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-<title>Creative Colorlib SignUp Form</title>
+<title>Kreatív Colorlib Regisztrációs űrlap</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
@@ -17,32 +17,33 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!-- web font -->
 <link href="//petriklajosszki.sharepoint.com///fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i" rel="stylesheet">
 <!-- //web font -->
+<script src="/src/index.js"></script>
 </head>
 <body>
 	<!-- main -->
 	<div class="main-w3layouts wrapper">
-		<h1>Creative SignUp Form</h1>
+		<h1>Kreatív Regisztrációs űrlap</h1>
 		<div class="main-agileinfo">
 			<div class="agileits-top">
 				<form action="#" method="post">
-					<input class="text" type="text" name="Username" placeholder="Username" required="">
-					<input class="text email" type="email" name="email" placeholder="Email" required="">
-					<input class="text" type="password" name="password" placeholder="Password" required="">
+					<input class="text" type="text" name="Username" placeholder="Felhasználónév" required="" id="username">
+					<input class="text email" type="email" name="email" placeholder="E-mail" required="">
+					<input class="text" type="password" name="password" placeholder="Jelszó" required="">
 					<div class="wthree-text">
 						<label class="anim">
 							<input type="checkbox" class="checkbox" required="">
-							<span>I Agree To The Terms & Conditions</span>
+							<span>Elfogadom az Általános Szerződési Feltételeket</span>
 						</label>
 						<div class="clear"> </div>
 					</div>
-					<input type="submit" value="SIGNUP">
+					<input type="submit" value="BEJELENTKEZÉS">
 				</form>
-				<p>Don't have an Account? <a href="#"> Login Now!</a></p>
+				<p>Nincs fiókod? <a href="#"> Csinálj egyet most!</a></p>
 			</div>
 		</div>
 		<!-- copyright -->
 		<div class="colorlibcopy-agile">
-			<p>© 2018 Colorlib Signup Form. All rights reserved | Design by <a href="https://colorlib.com/" target="_blank">Colorlib</a></p>
+			<p>© 2018 Colorlib regisztrációs űrlap. Minden jog fenntartva | Tervezte <a href="https://colorlib.com/" target="_blank">Colorlib</a></p>
 		</div>
 		<!-- //copyright -->
 		<ul class="colorlib-bubbles">
