--- a/src/index.html
+++ b/src/index.html
@@ -26,9 +26,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="main-agileinfo">
 			<div class="agileits-top">
 				<form action="#" method="post">
-                    <label id="errorUserName"></label>
-					<input class="text" type="text" name="Username" placeholder="Felhasználónév" required="" id="username">
-					<input class="text email" type="email" name="email" placeholder="E-mail" required="">
+                    <label id="errorUserName" ></label>
+                    <input class="text" type="text" name="Username" placeholder="Felhasználónév" required="" id="username">
+                    <label id="errorEmail"></label>
+					<input class="text email" type="email" name="email" placeholder="E-mail" required="" id="email">
 					<input class="text" type="password" name="password" placeholder="Jelszó" required="">
 					<div class="wthree-text">
 						<label class="anim">
