--- a/src/index.html
+++ b/src/index.html
@@ -29,8 +29,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <label id="errorUserName" ></label>
                     <input class="text" type="text" name="Username" placeholder="Felhasználónév" required="" id="username">
                     <label id="errorEmail"></label>
-					<input class="text email" type="email" name="email" placeholder="E-mail" required="" id="email">
-					<input class="text" type="password" name="password" placeholder="Jelszó" required="">
+                    <input class="text email" type="email" name="email" placeholder="E-mail" required="" id="email">
+					<input class="text email" type="email" name="reemail" placeholder="E-mail úrja" required="" id="reemail">
+                    <input class="text" type="password" name="password" placeholder="Jelszó" required="">
+					<input class="text" type="password" name="repassword" placeholder="Jelszó Újra" required="" id="repasswd">
 					<div class="wthree-text">
 						<label class="anim">
 							<input type="checkbox" class="checkbox" required="">
